// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VFooter.js should get the right padding with app prop 1`] = `

<footer class="footer footer--absolute"
        style="padding-left: 0px; padding-right: 0px;"
>
</footer>

`;

exports[`VFooter.js should get the right padding with app prop 2`] = `

<footer class="footer footer--absolute"
        style="padding-left: 20px; padding-right: 30px;"
>
</footer>

`;
